<resources>
    <string name="app_name">Account Kit</string>
    <string name="FACEBOOK_APP_ID">450646059045592</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">bcaa3f2b14ad666a256adaa9467a9473</string>

    <string name="ak_login_protocol_scheme">ak450646059045592</string>

    <string name="login_email_label">Login with Email</string>
    <string name="login_phone_label">Login with Phone Number</string>
    <string name="text_id">ID: %s</string>
    <string name="text_account">Account: %s</string>
    <string name="text_log_out">log out</string>

</resources>
