<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ak"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/phone_login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button_selector"
            android:onClick="onPhoneLogin"
            android:text="@string/login_phone_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/email_login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"

            android:background="@drawable/login_button_selector"
            android:onClick="onEmailLogin"
            android:text="@string/login_email_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="《Account Kit Privacy》" />


    </LinearLayout>


</RelativeLayout>